Fixed type in groups, and then added the spacing in the btns

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,11 @@
     margin-right: 10px;
 }
 
+#create-btn {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 /* Client Question stuff */
 .q-opt {
     margin-left: 25px;
